Homework-3/public-subnets.tf
resource "aws_subnet" "public1" {
    vpc_id     = aws_vpc.kaizen.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-west-2a"
    map_public_ip_on_launch = true

  tags = {
    Name = "public1"
  }
}

resource "aws_subnet" "public2" {
    vpc_id     = aws_vpc.kaizen.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "us-west-2b"
    map_public_ip_on_launch = true

  tags = {
    Name = "public2"
  }
}
